Corrected text alignment

--- a/css/website.css
+++ b/css/website.css
@@ -33,4 +33,5 @@ html, body{
 .color{
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
 }
